[gd_scene load_steps=2 format=3 uid="uid://dxmp2ws34kxmi"]

[ext_resource type="Script" uid="uid://cnh8rc5prxv5e" path="res://atividade-17/atividade_17.gd" id="1_8lkum"]

[node name="Atividade-17" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8lkum")

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 126.0
offset_right = 140.0
offset_bottom = 157.0
item_count = 4
popup/item_0/text = "Somar"
popup/item_0/id = 0
popup/item_1/text = "Subtrair"
popup/item_1/id = 1
popup/item_2/text = "Multiplicar"
popup/item_2/id = 2
popup/item_3/text = "Dividir"
popup/item_3/id = 3

[node name="Num1" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 17.0
offset_right = 233.0
offset_bottom = 57.0
placeholder_text = "Digite um número"

[node name="Num2" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 21.0
offset_top = 72.0
offset_right = 232.0
offset_bottom = 111.0
placeholder_text = "Digite um número"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 156.0
offset_top = 127.0
offset_right = 232.0
offset_bottom = 158.0
text = "Executar"

[node name="Res" type="Label" parent="."]
layout_mode = 0
offset_left = 267.0
offset_top = 52.0
offset_right = 345.0
offset_bottom = 77.0
text = "Resultado"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
